gcp: Configure google_compute resources

--- a/provider-gcp/examples/compute/targetpool.yaml
+++ b/provider-gcp/examples/compute/targetpool.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   forProvider:
     region: us-central1
+    # Only legacy HTTPHealthCheck is supported
     healthChecks:
     - example
     instances:
